# File-Collector-Script

./: .gitignore  README.md  collect.py  collector.py  config.py  discovery.py  platform_utils.py  pyproject.toml  tokens.py
src/collector/: __init__.py  __main__.py  cli.py  formatters.py
tests/: test_collector.py
