[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-collector"
version = "0.2.0"
description = "Collect and bundle source files for LLM context, sharing, or archiving."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "4tocall" }]
keywords = ["cli", "llm", "context", "code", "bundle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyperclip>=1.8",
    "pathspec>=0.12",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
collect = "collector.cli:app"

[project.urls]
Homepage = "https://github.com/4tocall/File-Collector-Script"
Issues = "https://github.com/4tocall/File-Collector-Script/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH"]
